trunk/Archive2/74/83521837d2911c/output
main.cpp:7:23: error: invalid conversion from 'signed char*' to 'char*' [-fpermissive]
 char*  C = new signed char;
                       ^
